fix: fixing responsive problems on mobile web browsers

--- a/src/components/background/HeroSection.css
+++ b/src/components/background/HeroSection.css
@@ -14,6 +14,7 @@
   
     .sobrep{
       font-weight: bolder;
+      line-height: 1.5;
     }
 
     @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@700&display=swap');
