--- a/src/components/cursos/CursosSeparados.css
+++ b/src/components/cursos/CursosSeparados.css
@@ -23,14 +23,14 @@
     font-size: 40px;
     margin-bottom: 30px;
     text-align: center;
-    line-height: 80px;
+    line-height: 1.7;
 }
 
 h3{
     font-family: 'Encode Sans', sans-serif;
     font-weight: bold;
     text-align: center;
-    line-height: 80px;
+    line-height: 1.7;
 }
 
 
@@ -40,7 +40,7 @@ h3{
     /* font-weight: bold; */
     font-size: 25px;
     text-align: center;
-    line-height: 40px;
+    line-height: 1.55;
     margin-left: 200px;
     margin-right: 200px;
 }
