--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -32,30 +32,14 @@
   }
 
   .logo{
-    max-width: 100px;
-    max-height: inherit;
+    max-width: 150px;
+    max-height: 150px;
     cursor: pointer;
   }
 
   @media only screen and (max-width: 1820px) {
     .logo{
         margin-left: -73px;
-        max-width: 100px;
-        max-height: inherit;
-    }  
-  }
-
-  @media only screen and (max-width: 1920px) {
-    .logo{
-        margin-left: -83px;
-        width: 160px;
-        height: 160px;
-    }  
-  }
-
-  @media only screen and (max-width: 2560px) {
-    .logo{
-        margin-left: -137px;
         max-width: 100px;
         max-height: inherit;
     }  
